--- a/trafego/pom.xml
+++ b/trafego/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.rp</groupId>
 	<artifactId>trafego</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>trafego</name>
 	<description>Gerenciamento de tráfego.</description>
 	<properties>
