--- a/trafficconsumer/src/main/resources/application.properties
+++ b/trafficconsumer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-spring.data.mongodb.uri=mongodb+srv://Mendes:113113@cluster0.46fvged.mongodb.net/<infracao>?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://Mendes:113113@cluster0.46fvged.mongodb.net/infracao?retryWrites=true&w=majority
 
 my-topics.traffic=traffic-topic
 my-topics.infracao=infracao-topic
