feat(Controler configurado para web): :sparkles: Controller configurado para web.  Consumer e producer movidos para pasta traffic(serviço)

--- a/traffic/trafficconsumer/src/main/resources/application.properties
+++ b/traffic/trafficconsumer/src/main/resources/application.properties
@@ -10,3 +10,6 @@ my-topics.traffic=traffic-topic
 my-topics.infracao=infracao-topic
 
 server.port=8081
+
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
