--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "conventionalCommits.scopes": [
         "Configuração docker-kafka-spring",
         "Novos consumidores e produtores",
-        "Conexão de dados com banco"
+        "Conexão de dados com banco",
+        "Controler configurado para web"
     ]
 }
