--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "java.compile.nullAnalysis.mode": "automatic",
     "conventionalCommits.scopes": [
         "Configuração docker-kafka-spring",
-        "Novos consumidores e produtores"
+        "Novos consumidores e produtores",
+        "api spring"
     ]
 }
