feat(api spring): :sparkles: Adicionada producer de accident

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,16 @@
             "projectName": "trafficconsumer",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-ApiApplication<api>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.api.api.ApiApplication",
+            "projectName": "api",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
