--- a/traffic/src/main/resources/application.properties
+++ b/traffic/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.data.mongodb.uri=mongodb+srv://Mendes:113113@cluster0.46fvged.mongodb.net/traffic?retryWrites=true&w=majority
 spring.kafka.bootstrap-servers=localhost:9092
+
+
+server.port=8082
