--- a/trafego/pom.xml
+++ b/trafego/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>thymeleaf-spring5</artifactId>
 			<version>3.1.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>3.0-alpha-1</version>
+			<scope>provided</scope>
+		</dependency>		
 	</dependencies>
 
 	<build>
