--- a/trafego/src/main/resources/application.properties
+++ b/trafego/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.web.resources.static-locations[0]=classpath:/static/
+spring.web.resources.static-locations[1]=classpath:/public/
