feat: :construction: Projeto criado, serviço consumindo mensagens do kafka e salvando no banco
O kafka foi configurado na serviço para consumir informações de infração. Elas são consumidas e processadas pelo service que as salva no banco de dados.  Para que tudo funcionasse foi necessário criar um DTO, Entity e repository. Ainda há métodos a serem inseridos

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,16 @@
             "projectName": "traffic",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-ServiceinfractionApplication<serviceinfraction>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.infraction.serviceinfraction.ServiceinfractionApplication",
+            "projectName": "serviceinfraction",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
