--- a/serviceaccident/src/main/resources/application.properties
+++ b/serviceaccident/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://Mendes:113113@cluster0.46fvged.mongodb.net/accident?retryWrites=true&w=majority
+spring.kafka.bootstrap-servers=localhost:9092
