feat: :sparkles: Métodos para buscas e porcentagem adicionados, Patterns usados: adapter e Command
A classe service está usando o padrão adapter para o cálculo da conversão de moedas, o controller está usando o padrão adaptar para ara encapsular uma solicitação como um objeto.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "Novos consumidores e produtores",
         "api spring",
         "Microsserviço de tráfego"
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
