Recebe e le sexo e idade salvando no banco

--- a/serviceinfraction/src/main/resources/application.properties
+++ b/serviceinfraction/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.data.mongodb.uri=mongodb+srv://Mendes:113113@cluster0.46fvged.mongodb.net/infraction?retryWrites=true&w=majority
+# spring.data.mongodb.uri=mongodb+srv://Mendes:113113@cluster0.46fvged.mongodb.net/infraction?retryWrites=true&w=majority
 spring.kafka.bootstrap-servers=localhost:9092
-
+spring.data.mongodb.uri=mongodb://localhost:27017/infraction
 
 
 server.port=8086
