Problemas de calculo de multa

--- a/traffic/src/main/resources/application.properties
+++ b/traffic/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# spring.data.mongodb.uri=mongodb+srv://Mendes:113113@cluster0.46fvged.mongodb.net/traffic?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://Mendes:113113@cluster0.46fvged.mongodb.net/traffic?retryWrites=true&w=majority
 # spring.data.mongodb.uri=mongodb://localhost:27017/traffic
 spring.kafka.bootstrap-servers=localhost:9092
 
